<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTvCenterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableLeft="@drawable/ic_hospital"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/idTvCenterLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTvCenterName"
            android:layout_margin="3dp"
            android:drawableStart="@drawable/ic_location"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_location"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/idTVCenterTimings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTvCenterLocation"
            android:layout_margin="3dp"
            android:drawableStart="@drawable/ic_time"
            android:drawableLeft="@drawable/ic_time"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_timings"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/idLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCenterTimings"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/idTvVaccineName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_vaccine"
                android:drawablePadding="3dp"
                android:text="@string/vaccine_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/idTVVaccineFees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fees"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLL"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/idTVAgeLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/age_limit"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/idTVAvailability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/availability"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>